--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link data-trunk rel="rust" data-wasm-opt="z"/>
-    <link data-trunk rel="css" href="/public/main.css"/>
+    <link data-trunk rel="css" href="./public/main.css"/>
 	</head>
 	<body></body>
 </html>
